No longer able to remove file output input sockets from python. #102611

Closed
opened 2022-11-18 20:47:38 +01:00 by michael campbell · 9 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-17 22:27, hash: 2c096f17a6
Worked: (3.5 alpha from a couple of days ago (I'm not sure which one as I've deleted the zip)

Short description of error

I have an addon in use by around a thousand paying customers, and all of a sudden over the last day or so, it's been reported that the addon has ceased to work due to a sudden inability to remove file output node sockets. This is a necessity in order for the resulting multilayer EXR to adhere to the correct naming conventions.

I'm a financial supporter of blender, both as a percentage of addon sales and the development fun. Is there any chance this could be fixed quickly to save me a ton of complaints/refund requests? The addon is my only source of income.

Reproduction steps:

turn on use nodes in the compositor, then run this script:

import bpy
scene = bpy.context.scene
file_output_node =scene.node_tree.nodes.new("CompositorNodeOutputFile")
file_output_node.file_slots.remove(file_output_node.inputs[0])

Results in RuntimeError: Error: Unable to remove socket from built-in node.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-17 22:27, hash: `2c096f17a6` Worked: (3.5 alpha from a couple of days ago (I'm not sure which one as I've deleted the zip) **Short description of error** I have an addon in use by around a thousand paying customers, and all of a sudden over the last day or so, it's been reported that the addon has ceased to work due to a sudden inability to remove file output node sockets. This is a necessity in order for the resulting multilayer EXR to adhere to the correct naming conventions. I'm a financial supporter of blender, both as a percentage of addon sales and the development fun. Is there any chance this could be fixed quickly to save me a ton of complaints/refund requests? The addon is my only source of income. Reproduction steps: turn on use nodes in the compositor, then run this script: ``` import bpy scene = bpy.context.scene file_output_node =scene.node_tree.nodes.new("CompositorNodeOutputFile") file_output_node.file_slots.remove(file_output_node.inputs[0]) ``` Results in RuntimeError: Error: Unable to remove socket from built-in node.

Added subscriber: @3di

Added subscriber: @3di

This issue was referenced by c4cfa1b23e

This issue was referenced by c4cfa1b23ee661a941e46c52e9fb8df1e43e74d4

This issue was referenced by c0f33814c1

This issue was referenced by c0f33814c13c38aa49b909ba2a8946798d14d078
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Hans Goudey self-assigned this 2022-11-18 21:03:32 +01:00
Member

Caused by 52bd198153.

I do wonder if there's a better API to make these changes that doesn't require changing the sockets of the node directly.

However, that doesn't matter at all now, because we shouldn't make such breaking changes for regular releases, especially with no warning or announcement, etc.

Caused by 52bd198153. I do wonder if there's a better API to make these changes that doesn't require changing the sockets of the node directly. However, that doesn't matter at all now, because we shouldn't make such breaking changes for regular releases, especially with no warning or announcement, etc.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Thanks @HooglyBoogly , you're a legend! Phew!

Thanks @HooglyBoogly , you're a legend! Phew!

I think Jacque must have just forgotten that the file output node requires the the sockets be editable in order for it to function. It's probably the only node other than a group node that needs that flexibility.

I think Jacque must have just forgotten that the file output node requires the the sockets be editable in order for it to function. It's probably the only node other than a group node that needs that flexibility.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102611
No description provided.