Fix T102611: Unable to change file output node sockets from python

Similar to 84c66fe9db932b82ebf